fix contrast

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,10 @@
 :root {
   --white: #ffffff;
   --black: #000000;
-  --gray: #75858f;
+  --gray: #2c4554;
   --purple: #5b1ee1;
   --light-grey: #fafafa;
-  --mid-grey: #aaaaaa;
+  --mid-grey: #3b3b3b;
 } /* variables*/
 
 /* Reset */
